CS 536/pr5/tests/errors/rvalue_address.minc
void main()
{
	int* varname = &79;
	int tryToUse = &102 + 3;
}
